k8s/overlays/testing/flask-deploy-patch.yaml
# k8s/overlays/testing/flask-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp # Deployment name
spec:
  replicas: 1 # Number of replicas
  template:
    spec:
      containers:
        - name: flaskapp # Container name
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql # Deployment name
spec:
  template:
    spec:
      containers:
        - name: mysql # Container name
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
